k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tradewise
  labels:
    name: tradewise
    environment: production
